<resources>
    <string name="app_name">Know Your Government</string>
    <string name="about">About</string>
    <string name="about_button">aboutButton</string>
    <string name="search">Search</string>
    <string name="search_button">searchButton</string>
    <string name="location_id">CITY, STATE ZIP</string>
    <string name="default_location">Chicago, IL 60616</string>
    <string name="separator">Separator</string>
<!--    About Activity -->
    <string name="developer_info">Quan Le</string>
    <string name="developed_year">© 2020,</string>
    <string name="version">Version 1.0</string>
    <string name="powered_by">Powered by</string>
    <string name="API"><u>Google Civic Information API</u></string>
<!--    Officials Activity -->
    <string name="party_logo">Party Logo</string>
    <string name="profile_picture">Profile Photo</string>
    <string name="address">Address: </string>
    <string name="phone">Phone: </string>
    <string name="email">Email: </string>
    <string name="website">Website: </string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="youtube">YouTube</string>
    <string name="official_position">President of the United States of America</string>
    <string name="official_name">Abraham Lincoln</string>
    <string name="official_party">(Republican Party)</string>
    <string name="official_address_line1">White House</string>
    <string name="official_address_line2">1600 Pennsylvania Avenue NW</string>
    <string name="official_address_line3">Washington, D.C. 20500, U.S.</string>
    <string name="official_phone">+1-888-US-POTUS</string>
    <string name="official_email">abelincoln@POTUS.gov</string>
    <string name="official_website">https://www.whitehouse.gov/</string>
<!--    Main Dialog -->
    <string name="dialog_office_id">dialogOffice</string>
    <string name="dialog_name_party_id">dialogNameParty</string>
    <string name="dialog_office">President of the United States of America</string>
    <string name="dialog_name_party">Abraham Lincoln (Republican Party)</string>

</resources>