<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/americanBlue"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/separator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/separator" />

    <TextView
        android:id="@+id/dialog_name_party_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="15dp"
        android:textAlignment="textEnd"
        android:textColor="@color/golden_rod"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        tools:text="@string/dialog_name_party" />

    <TextView
        android:id="@+id/dialog_office_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        android:textColor="@color/golden_rod"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/dialog_office" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>