<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.OfficialActivity">

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/location_bg"
        android:elevation="4dp"
        android:padding="2dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Chicago, IL, 60616" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".details.OfficialActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-49dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detailsCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/details_bg"
                android:elevation="4dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/partyLogo">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/emailLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/emailLabel"
                    app:layout_constraintTop_toTopOf="@+id/emailLabel" />

                <TextView
                    android:id="@+id/url"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/urlLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/urlLabel"
                    app:layout_constraintTop_toTopOf="@+id/urlLabel" />

                <TextView
                    android:id="@+id/phoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/address" />

                <TextView
                    android:id="@+id/urlLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_link"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textIsSelectable="false"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/addrressLabel"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="400 E 33rd St Apt 1603, Chicago, 60616," />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/phoneLabel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/phoneLabel"
                    app:layout_constraintTop_toTopOf="@+id/phoneLabel"/>

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_email"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />

                <TextView
                    android:id="@+id/addrressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_home"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/address"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/address" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="U.S. Senator" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/party"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name"
                tools:text="(Democratic Party)" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6019152" />

            <ImageView
                android:id="@+id/dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:background="@drawable/dp_background"
                android:clickable="true"
                android:contentDescription="@string/profile_picture"
                android:cropToPadding="true"
                android:elevation="4dp"
                android:onClick="expandImage"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toTopOf="@+id/guideline9"
                app:layout_constraintEnd_toStartOf="@+id/verticalRight"
                app:layout_constraintStart_toStartOf="@+id/verticalLeft"
                app:layout_constraintTop_toBottomOf="@+id/party"
                app:srcCompat="@drawable/default_dp" />

            <ImageView
                android:id="@+id/partyLogo"
                android:layout_width="105dp"
                android:layout_height="105dp"
                android:background="@drawable/party_bg"
                android:contentDescription="@string/party_logo"
                android:elevation="6dp"
                android:onClick="partyLogoClicked"
                android:scaleType="centerInside"
                app:layout_constraintEnd_toStartOf="@+id/verticalRight"
                app:layout_constraintStart_toStartOf="@+id/verticalLeft"
                app:layout_constraintTop_toTopOf="@+id/guideline7"
                app:srcCompat="@drawable/dem_logo" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5294118" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/facebook"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/social_bg"
                android:clickable="true"
                android:contentDescription="@string/facebook"
                android:onClick="facebookClicked"
                android:padding="2dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/twitter"
                app:layout_constraintTop_toBottomOf="@+id/detailsCard"
                app:srcCompat="@drawable/ic_fb" />

            <ImageView
                android:id="@+id/twitter"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/social_bg"
                android:clickable="true"
                android:contentDescription="@string/twitter"
                android:onClick="twitterClicked"
                android:padding="10dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailsCard"
                app:srcCompat="@drawable/ic_twitter" />

            <ImageView
                android:id="@+id/youtube"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/social_bg"
                android:clickable="true"
                android:contentDescription="@string/youtube"
                android:onClick="youTubeClicked"
                android:padding="5dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/facebook"
                app:layout_constraintTop_toBottomOf="@+id/detailsCard"
                app:srcCompat="@drawable/ic_youtube" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>